objects/User.object
<CustomObject>
    <fields>
        <fullName>Acorn_SUser_ID__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Acorn SUser ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Integration Users to ByPass Validation Rules.</description>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Active_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Email__c</fullName>
        <label>Department Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Department_Phone__c</fullName>
        <label>Department Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GR_Service_Flag__c</fullName>
        <label>GR Service Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genesys_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genesys Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Developer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Determine if user is a Developer/QA for refresh&apos; in lower environments.</description>
        <label>Developer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Genesys_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by CI Team Hot fix SDT-25285</description>
        <label>Is Genesys User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Group__c</fullName>
        <description>Used for Group Reporting using Einstein, will be populated by Process Builder only.</description>
        <label>Reporting Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Team__c</fullName>
        <description>Reporting Team Id</description>
        <label>Reporting Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>00G0U000000piSTUAY</fullName>
                    <label>Team Organ</label>
                </value>
                <value>
                    <fullName>00G0U000000piSJUAY</fullName>
                    <label>Team Allen</label>
                </value>
                <value>
                    <fullName>00G0U000000psZBUAY</fullName>
                    <label>CS_Email_2</label>
                </value>
                <value>
                    <fullName>00G0U000000psZGUAY</fullName>
                    <label>CS_Email_3</label>
                </value>
                <value>
                    <fullName>00G0U000000psZ1UAI</fullName>
                    <label>CS_Phone_1</label>
                </value>
                <value>
                    <fullName>00G0U000000psZ6UAI</fullName>
                    <label>CS_Phone_2</label>
                </value>
                <value>
                    <fullName>00G0U000000piJgUAI</fullName>
                    <label>Team Jones</label>
                </value>
                <value>
                    <fullName>00G0U000000pwcxUAA</fullName>
                    <label>Team Knight</label>
                </value>
                <value>
                    <fullName>00G0U000000pwd7UAA</fullName>
                    <label>Team LeRoy</label>
                </value>
                <value>
                    <fullName>00G0U000000piK0UAI</fullName>
                    <label>Team Delgado</label>
                </value>
                <value>
                    <fullName>00G0U000000piJvUAI</fullName>
                    <label>Team Pelkey</label>
                </value>
                <value>
                    <fullName>00G0U000000pwcsUAA</fullName>
                    <label>Team Rumore</label>
                </value>
                <value>
                    <fullName>00G0U000000pwc</fullName>
                    <label>Team Whitted</label>
                </value>
                <value>
                    <fullName>00G0U000000piJqUAI</fullName>
                    <label>Team Pawloski</label>
                </value>
                <value>
                    <fullName>00G0U000000pwd2UAA</fullName>
                    <label>Team Walker</label>
                </value>
                <value>
                    <fullName>00G0U000000piSOUAY</fullName>
                    <label>Team Bellos</label>
                </value>
                <value>
                    <fullName>CS_Email_2	00G0U000000psZBUAY</fullName>
                </value>
                <value>
                    <fullName>CS_Email_3	00G0U000000psZGUAY</fullName>
                </value>
                <value>
                    <fullName>CS_Interns_1	00G0U000000pwdgUAA</fullName>
                </value>
                <value>
                    <fullName>CS_Manager_1	00G0U000000piSJUAY</fullName>
                </value>
                <value>
                    <fullName>CS_Manager_2	00G0U000000piSOUAY</fullName>
                </value>
                <value>
                    <fullName>CS_MI_1	00G0U000000pwdHUAQ</fullName>
                </value>
                <value>
                    <fullName>CS_Phone_1	00G0U000000psZ1UAI</fullName>
                </value>
                <value>
                    <fullName>CS_Phone_2	00G0U000000psZ6UAI</fullName>
                </value>
                <value>
                    <fullName>CS_Phone_3	00G0U000000pwdCUAQ</fullName>
                </value>
                <value>
                    <fullName>CS_Phone_4	00G0U000000pwdWUAQ</fullName>
                </value>
                <value>
                    <fullName>CS_QA_1	00G0U000000pwdlUAA</fullName>
                </value>
                <value>
                    <fullName>CS_SRT_1	00G0U000000pwdMUAQ</fullName>
                </value>
                <value>
                    <fullName>CS_Supervisor_1	00G0U000000piJgUAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoleCombination__c</fullName>
        <formula>OR(UserRole.Name = &apos;System Administrator&apos;,
UserRole.Name = &apos;Client Setup &amp; Maintenance Supervisor&apos;,
UserRole.Name = &apos;Client Setup &amp; Maintenance Manager&apos;,
UserRole.Name = &apos;Client Setup &amp; Maintenance Representative&apos;,
UserRole.Name = &apos;Launch Manager&apos;,
UserRole.Name = &apos;Launch Supervisor&apos;,
UserRole.Name = &apos;Launch team&apos;,
UserRole.Name = &apos;Vendor Relations Representative&apos;,
UserRole.Name = &apos;Vendor Relations Director&apos;,
UserRole.Name = &apos;Vendor Relations Manager&apos;,
UserRole.Name = &apos;Project Service Represenative&apos;,
UserRole.Name = &apos;Program Manager&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoleCombination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Asset_Active_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will hide the record type of Update Asset Case.</description>
        <inlineHelpText>Check this box to create Update Asset Case.</inlineHelpText>
        <label>Add change Update Asset Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_categorization_code__c</fullName>
        <label>User categorization code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSRPR</fullName>
                </value>
                <value>
                    <fullName>CSRES</fullName>
                </value>
                <value>
                    <fullName>CSGEN</fullName>
                </value>
                <value>
                    <fullName>SSMGEN</fullName>
                </value>
                <value>
                    <fullName>SPCOR</fullName>
                </value>
                <value>
                    <fullName>CSMGR</fullName>
                </value>
                <value>
                    <fullName>SALESGEN</fullName>
                </value>
                <value>
                    <fullName>CSCANGEN</fullName>
                </value>
                <value>
                    <fullName>WMCST</fullName>
                </value>
                <value>
                    <fullName>NSQTO</fullName>
                </value>
                <value>
                    <fullName>CSCANMGR</fullName>
                </value>
                <value>
                    <fullName>NSGEN</fullName>
                </value>
                <value>
                    <fullName>FASTR</fullName>
                </value>
                <value>
                    <fullName>CPLGEN</fullName>
                </value>
                <value>
                    <fullName>SSMMGR</fullName>
                </value>
                <value>
                    <fullName>VRGEN</fullName>
                </value>
                <value>
                    <fullName>VRMGR</fullName>
                </value>
                <value>
                    <fullName>SALESPREM</fullName>
                </value>
                <value>
                    <fullName>CSDTRES</fullName>
                </value>
                <value>
                    <fullName>VORES</fullName>
                </value>
                <value>
                    <fullName>VOMAIN</fullName>
                </value>
                <value>
                    <fullName>CSOFFGEN</fullName>
                </value>
                <value>
                    <fullName>SFNEW</fullName>
                </value>
                <value>
                    <fullName>SFCHG</fullName>
                </value>
                <value>
                    <fullName>SFCAN</fullName>
                </value>
                <value>
                    <fullName>SFMGR</fullName>
                </value>
                <value>
                    <fullName>PSNEW</fullName>
                </value>
                <value>
                    <fullName>SPISC</fullName>
                </value>
                <value>
                    <fullName>CSSVCL</fullName>
                </value>
                <value>
                    <fullName>CSMONT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Bitbucket_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a Bitbucket Repository</description>
        <label>Bitbucket Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf_devops__DevOps_Testing_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the User acknowledged the notice about DevOps Testing in the Promote Options Dialog.</description>
        <inlineHelpText>Determines whether the User acknowledged the notice about DevOps Testing in the Promote Options Dialog.</inlineHelpText>
        <label>DevOps Testing Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a GitHub Repository</description>
        <label>GitHub Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>userRoleNameCPQ__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>userRoleNameCPQ</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Integration Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Project_Service_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Acorn_SUser_ID__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Project Service</value>
        </filters>
        <label>Project Service Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>